[gd_scene load_steps=29 format=3 uid="uid://212da705ytk0"]

[ext_resource type="Texture2D" uid="uid://bx3fifa58ane3" path="res://assets/main/world/creature/1/head-packed.png" id="2_gkp8v"]
[ext_resource type="Script" path="res://src/main/world/creature/creature.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dnjp4llnl32yl" path="res://assets/main/world/creature/1/cheek-z0-packed.png" id="3_ijsb5"]
[ext_resource type="Texture2D" uid="uid://b767uchsiq0fo" path="res://assets/main/world/creature/1/cheek-z1-packed.png" id="4_3kx72"]
[ext_resource type="AudioStream" uid="uid://dspjgi18ysym7" path="res://assets/main/world/creature/move-bonk.wav" id="5"]
[ext_resource type="Texture2D" uid="uid://do2u4hl5tnx2c" path="res://assets/main/world/creature/1/cheek-z2-packed.png" id="5_u2l46"]
[ext_resource type="Texture2D" uid="uid://dnfrbhivdy8rm" path="res://assets/main/world/creature/1/ear-z0-packed.png" id="6_kbdf5"]
[ext_resource type="AudioStream" uid="uid://b43dltpth0cve" path="res://assets/main/world/creature/move-hop.wav" id="7"]
[ext_resource type="Texture2D" uid="uid://biv3vtobasshc" path="res://assets/main/world/creature/1/ear-z1-packed.png" id="7_4pego"]
[ext_resource type="Script" path="res://src/main/world/creature/creature-collision-shape.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://drkaehpf2vbj3" path="res://assets/main/world/creature/1/ear-z2-packed.png" id="8_1124h"]
[ext_resource type="Texture2D" uid="uid://b5iytuh7d6e6t" path="res://assets/main/world/creature/5/eye-z0-packed.png" id="9_xerm3"]
[ext_resource type="Texture2D" uid="uid://cfnl2ayvij8xg" path="res://assets/main/world/creature/5/eye-z1-packed.png" id="10_o2v3p"]
[ext_resource type="Texture2D" uid="uid://dd7s5bq0nkyfy" path="res://assets/main/world/creature/1/emote-eye-z0-packed.png" id="11_ktucn"]
[ext_resource type="Texture2D" uid="uid://cbn3aydy0fb7y" path="res://assets/main/world/creature/1/emote-eye-z1-packed.png" id="12_ftkyd"]
[ext_resource type="Texture2D" uid="uid://i5vqkf5dqtfp" path="res://assets/main/world/creature/2/horn-z0-packed.png" id="13_aofya"]
[ext_resource type="Texture2D" uid="uid://dvx6lx4ysfkrf" path="res://assets/main/world/creature/2/horn-z1-packed.png" id="14_3qpsq"]
[ext_resource type="Texture2D" uid="uid://djx5wonuhqt6v" path="res://assets/main/world/creature/7/mouth-packed.png" id="15_e4bh1"]
[ext_resource type="Texture2D" uid="uid://bjyr6gyw367vj" path="res://assets/main/world/creature/4/nose-packed.png" id="16_reaum"]
[ext_resource type="Texture2D" uid="uid://r8u2vcn15bn0" path="res://assets/main/world/creature/1/sprint-z0-packed.png" id="17_ht0q7"]
[ext_resource type="Texture2D" uid="uid://655nuag6rywn" path="res://assets/main/world/creature/1/arm-z0-packed.png" id="18_7bxa2"]
[ext_resource type="Texture2D" uid="uid://bk2pnsm0tmda7" path="res://assets/main/world/creature/1/leg-z0-packed.png" id="19_wyjud"]
[ext_resource type="Texture2D" uid="uid://deby7h2nel1gc" path="res://assets/main/world/creature/1/leg-z1-packed.png" id="20_gqkgm"]
[ext_resource type="Texture2D" uid="uid://0ltp8pb2ct1f" path="res://assets/main/world/creature/1/arm-z1-packed.png" id="21_xv8n2"]
[ext_resource type="Texture2D" uid="uid://8x3rslty4mqk" path="res://assets/main/world/creature/1/chin-packed.png" id="22_2bt4h"]
[ext_resource type="Script" path="res://src/main/world/creature/creature-sfx.gd" id="23"]
[ext_resource type="Script" path="res://src/main/world/creature/mouth-hook.gd" id="31"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(28, 14)

[node name="Creature" type="CharacterBody2D" groups=["creatures"]]
script = ExtResource("3")
dna = {
"accessory": "0",
"belly": "2",
"belly_rgb": "c9dac6",
"bellybutton": "0",
"body": "1",
"body_rgb": "9a7f5d",
"cheek": "1",
"cloth_rgb": "25291b",
"collar": "0",
"ear": "1",
"emote-eye": "1",
"eye": "5",
"eye_rgb": "25291b 606060",
"glass_rgb": "1f201e",
"hair": "0",
"hair_rgb": "40342d",
"head": "1",
"horn": "2",
"horn_rgb": "b9b9b9",
"line_rgb": "6c4331",
"mouth": "7",
"nose": "4",
"plastic_rgb": "3b3724",
"property:Body:belly_color": Color(0.788235, 0.854902, 0.776471, 1),
"property:Body:body_color": Color(0.603922, 0.498039, 0.364706, 1),
"property:Body:line_color": Color(0.423529, 0.262745, 0.192157, 1),
"property:Body:shadow_color": Color(0.423529, 0.262745, 0.192157, 0.25),
"property:FarArm:frame_data": "res://assets/main/world/creature/1/arm-z0-packed.json",
"property:FarArm:texture": ExtResource("18_7bxa2"),
"property:FarLeg:frame_data": "res://assets/main/world/creature/1/leg-z0-packed.json",
"property:FarLeg:texture": ExtResource("19_wyjud"),
"property:NearArm:frame_data": "res://assets/main/world/creature/1/arm-z1-packed.json",
"property:NearArm:texture": ExtResource("21_xv8n2"),
"property:NearLeg:frame_data": "res://assets/main/world/creature/1/leg-z1-packed.json",
"property:NearLeg:texture": ExtResource("20_gqkgm"),
"property:Neck0/HeadBobber/CheekZ0:frame_data": "res://assets/main/world/creature/1/cheek-z0-packed.json",
"property:Neck0/HeadBobber/CheekZ0:texture": ExtResource("3_ijsb5"),
"property:Neck0/HeadBobber/CheekZ1:frame_data": "res://assets/main/world/creature/1/cheek-z1-packed.json",
"property:Neck0/HeadBobber/CheekZ1:texture": ExtResource("4_3kx72"),
"property:Neck0/HeadBobber/CheekZ2:frame_data": "res://assets/main/world/creature/1/cheek-z2-packed.json",
"property:Neck0/HeadBobber/CheekZ2:texture": ExtResource("5_u2l46"),
"property:Neck0/HeadBobber/Chin:frame_data": "res://assets/main/world/creature/1/chin-packed.json",
"property:Neck0/HeadBobber/Chin:texture": ExtResource("22_2bt4h"),
"property:Neck0/HeadBobber/EarZ0:frame_data": "res://assets/main/world/creature/1/ear-z0-packed.json",
"property:Neck0/HeadBobber/EarZ0:texture": ExtResource("6_kbdf5"),
"property:Neck0/HeadBobber/EarZ1:frame_data": "res://assets/main/world/creature/1/ear-z1-packed.json",
"property:Neck0/HeadBobber/EarZ1:texture": ExtResource("7_4pego"),
"property:Neck0/HeadBobber/EarZ2:frame_data": "res://assets/main/world/creature/1/ear-z2-packed.json",
"property:Neck0/HeadBobber/EarZ2:texture": ExtResource("8_1124h"),
"property:Neck0/HeadBobber/EmoteEyeZ0:frame_data": "res://assets/main/world/creature/1/emote-eye-z0-packed.json",
"property:Neck0/HeadBobber/EmoteEyeZ0:texture": ExtResource("11_ktucn"),
"property:Neck0/HeadBobber/EmoteEyeZ1:frame_data": "res://assets/main/world/creature/1/emote-eye-z1-packed.json",
"property:Neck0/HeadBobber/EmoteEyeZ1:texture": ExtResource("12_ftkyd"),
"property:Neck0/HeadBobber/EyeZ0:frame_data": "res://assets/main/world/creature/5/eye-z0-packed.json",
"property:Neck0/HeadBobber/EyeZ0:texture": ExtResource("9_xerm3"),
"property:Neck0/HeadBobber/EyeZ1:frame_data": "res://assets/main/world/creature/5/eye-z1-packed.json",
"property:Neck0/HeadBobber/EyeZ1:texture": ExtResource("10_o2v3p"),
"property:Neck0/HeadBobber/Head:frame_data": "res://assets/main/world/creature/1/head-packed.json",
"property:Neck0/HeadBobber/Head:texture": ExtResource("2_gkp8v"),
"property:Neck0/HeadBobber/HornZ0:frame_data": "res://assets/main/world/creature/2/horn-z0-packed.json",
"property:Neck0/HeadBobber/HornZ0:texture": ExtResource("13_aofya"),
"property:Neck0/HeadBobber/HornZ1:frame_data": "res://assets/main/world/creature/2/horn-z1-packed.json",
"property:Neck0/HeadBobber/HornZ1:texture": ExtResource("14_3qpsq"),
"property:Neck0/HeadBobber/Mouth:frame_data": "res://assets/main/world/creature/7/mouth-packed.json",
"property:Neck0/HeadBobber/Mouth:texture": ExtResource("15_e4bh1"),
"property:Neck0/HeadBobber/Nose:frame_data": "res://assets/main/world/creature/4/nose-packed.json",
"property:Neck0/HeadBobber/Nose:texture": ExtResource("16_reaum"),
"property:Sprint:frame_data": "res://assets/main/world/creature/1/sprint-z0-packed.json",
"property:Sprint:texture": ExtResource("17_ht0q7"),
"shader:Bellybutton:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Bellybutton:red": Color(0.788235, 0.854902, 0.776471, 1),
"shader:Collar:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Collar:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Collar:red": Color(0.145098, 0.160784, 0.105882, 1),
"shader:EmoteBody:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:FarArm:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:FarArm:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:FarLeg:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:FarLeg:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:NearArm:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:NearArm:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:NearLeg:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:NearLeg:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:blue": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:green": Color(0.121569, 0.12549, 0.117647, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:red": Color(0.231373, 0.215686, 0.141176, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:blue": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:green": Color(0.121569, 0.12549, 0.117647, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:red": Color(0.231373, 0.215686, 0.141176, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:blue": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:green": Color(0.121569, 0.12549, 0.117647, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:red": Color(0.231373, 0.215686, 0.141176, 1),
"shader:Neck0/HeadBobber/CheekZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/CheekZ0:green": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/CheekZ1:green": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/CheekZ2:green": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ2:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/Chin:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Chin:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EarZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EarZ0:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/EarZ0:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/EarZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EarZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EarZ1:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/EarZ1:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/EarZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EarZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EarZ2:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/EarZ2:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/EarZ2:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EmoteArmZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteArmZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EmoteArmZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteArmZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EmoteBrain:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ0:red": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ1:red": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/EyeZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EyeZ0:blue": Color(0.376471, 0.376471, 0.376471, 1),
"shader:Neck0/HeadBobber/EyeZ0:green": Color(0.145098, 0.160784, 0.105882, 1),
"shader:Neck0/HeadBobber/EyeZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EyeZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EyeZ1:blue": Color(0.376471, 0.376471, 0.376471, 1),
"shader:Neck0/HeadBobber/EyeZ1:green": Color(0.145098, 0.160784, 0.105882, 1),
"shader:Neck0/HeadBobber/EyeZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/HairZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HairZ0:red": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/HairZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HairZ1:red": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/HairZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HairZ2:red": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/Head:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Head:green": Color(0.788235, 0.854902, 0.776471, 1),
"shader:Neck0/HeadBobber/Head:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/HornZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HornZ0:green": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/HornZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/HornZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HornZ1:green": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/HornZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/Mouth:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Mouth:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/Mouth:green": Color(0.952941, 0.572549, 0.454902, 1),
"shader:Neck0/HeadBobber/Mouth:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/Nose:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Nose:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:TailZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:TailZ0:blue": Color(0.25098, 0.203922, 0.176471, 1),
"shader:TailZ0:green": Color(0.788235, 0.854902, 0.776471, 1),
"shader:TailZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:TailZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:TailZ1:blue": Color(0.25098, 0.203922, 0.176471, 1),
"shader:TailZ1:green": Color(0.788235, 0.854902, 0.776471, 1),
"shader:TailZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"tail": "0"
}
metadata/dna = {
"accessory": "0",
"belly": "2",
"belly_rgb": "c9dac6",
"bellybutton": "0",
"body": "1",
"body_rgb": "9a7f5d",
"cheek": "1",
"cloth_rgb": "25291b",
"collar": "0",
"ear": "1",
"emote-eye": "1",
"eye": "5",
"eye_rgb": "25291b 606060",
"glass_rgb": "1f201e",
"hair": "0",
"hair_rgb": "40342d",
"head": "1",
"horn": "2",
"horn_rgb": "b9b9b9",
"line_rgb": "6c4331",
"mouth": "7",
"nose": "4",
"plastic_rgb": "3b3724",
"property:Body:belly_color": Color(0.788235, 0.854902, 0.776471, 1),
"property:Body:body_color": Color(0.603922, 0.498039, 0.364706, 1),
"property:Body:line_color": Color(0.423529, 0.262745, 0.192157, 1),
"property:Body:shadow_color": Color(0.423529, 0.262745, 0.192157, 0.25),
"property:FarArm:frame_data": "res://assets/main/world/creature/1/arm-z0-packed.json",
"property:FarArm:texture": ExtResource("18_7bxa2"),
"property:FarLeg:frame_data": "res://assets/main/world/creature/1/leg-z0-packed.json",
"property:FarLeg:texture": ExtResource("19_wyjud"),
"property:NearArm:frame_data": "res://assets/main/world/creature/1/arm-z1-packed.json",
"property:NearArm:texture": ExtResource("21_xv8n2"),
"property:NearLeg:frame_data": "res://assets/main/world/creature/1/leg-z1-packed.json",
"property:NearLeg:texture": ExtResource("20_gqkgm"),
"property:Neck0/HeadBobber/CheekZ0:frame_data": "res://assets/main/world/creature/1/cheek-z0-packed.json",
"property:Neck0/HeadBobber/CheekZ0:texture": ExtResource("3_ijsb5"),
"property:Neck0/HeadBobber/CheekZ1:frame_data": "res://assets/main/world/creature/1/cheek-z1-packed.json",
"property:Neck0/HeadBobber/CheekZ1:texture": ExtResource("4_3kx72"),
"property:Neck0/HeadBobber/CheekZ2:frame_data": "res://assets/main/world/creature/1/cheek-z2-packed.json",
"property:Neck0/HeadBobber/CheekZ2:texture": ExtResource("5_u2l46"),
"property:Neck0/HeadBobber/Chin:frame_data": "res://assets/main/world/creature/1/chin-packed.json",
"property:Neck0/HeadBobber/Chin:texture": ExtResource("22_2bt4h"),
"property:Neck0/HeadBobber/EarZ0:frame_data": "res://assets/main/world/creature/1/ear-z0-packed.json",
"property:Neck0/HeadBobber/EarZ0:texture": ExtResource("6_kbdf5"),
"property:Neck0/HeadBobber/EarZ1:frame_data": "res://assets/main/world/creature/1/ear-z1-packed.json",
"property:Neck0/HeadBobber/EarZ1:texture": ExtResource("7_4pego"),
"property:Neck0/HeadBobber/EarZ2:frame_data": "res://assets/main/world/creature/1/ear-z2-packed.json",
"property:Neck0/HeadBobber/EarZ2:texture": ExtResource("8_1124h"),
"property:Neck0/HeadBobber/EmoteEyeZ0:frame_data": "res://assets/main/world/creature/1/emote-eye-z0-packed.json",
"property:Neck0/HeadBobber/EmoteEyeZ0:texture": ExtResource("11_ktucn"),
"property:Neck0/HeadBobber/EmoteEyeZ1:frame_data": "res://assets/main/world/creature/1/emote-eye-z1-packed.json",
"property:Neck0/HeadBobber/EmoteEyeZ1:texture": ExtResource("12_ftkyd"),
"property:Neck0/HeadBobber/EyeZ0:frame_data": "res://assets/main/world/creature/5/eye-z0-packed.json",
"property:Neck0/HeadBobber/EyeZ0:texture": ExtResource("9_xerm3"),
"property:Neck0/HeadBobber/EyeZ1:frame_data": "res://assets/main/world/creature/5/eye-z1-packed.json",
"property:Neck0/HeadBobber/EyeZ1:texture": ExtResource("10_o2v3p"),
"property:Neck0/HeadBobber/Head:frame_data": "res://assets/main/world/creature/1/head-packed.json",
"property:Neck0/HeadBobber/Head:texture": ExtResource("2_gkp8v"),
"property:Neck0/HeadBobber/HornZ0:frame_data": "res://assets/main/world/creature/2/horn-z0-packed.json",
"property:Neck0/HeadBobber/HornZ0:texture": ExtResource("13_aofya"),
"property:Neck0/HeadBobber/HornZ1:frame_data": "res://assets/main/world/creature/2/horn-z1-packed.json",
"property:Neck0/HeadBobber/HornZ1:texture": ExtResource("14_3qpsq"),
"property:Neck0/HeadBobber/Mouth:frame_data": "res://assets/main/world/creature/7/mouth-packed.json",
"property:Neck0/HeadBobber/Mouth:texture": ExtResource("15_e4bh1"),
"property:Neck0/HeadBobber/Nose:frame_data": "res://assets/main/world/creature/4/nose-packed.json",
"property:Neck0/HeadBobber/Nose:texture": ExtResource("16_reaum"),
"property:Sprint:frame_data": "res://assets/main/world/creature/1/sprint-z0-packed.json",
"property:Sprint:texture": ExtResource("17_ht0q7"),
"shader:Bellybutton:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Bellybutton:red": Color(0.788235, 0.854902, 0.776471, 1),
"shader:Collar:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Collar:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Collar:red": Color(0.145098, 0.160784, 0.105882, 1),
"shader:EmoteBody:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:FarArm:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:FarArm:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:FarLeg:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:FarLeg:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:NearArm:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:NearArm:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:NearLeg:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:NearLeg:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:blue": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:green": Color(0.121569, 0.12549, 0.117647, 1),
"shader:Neck0/HeadBobber/AccessoryZ0:red": Color(0.231373, 0.215686, 0.141176, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:blue": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:green": Color(0.121569, 0.12549, 0.117647, 1),
"shader:Neck0/HeadBobber/AccessoryZ1:red": Color(0.231373, 0.215686, 0.141176, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:blue": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:green": Color(0.121569, 0.12549, 0.117647, 1),
"shader:Neck0/HeadBobber/AccessoryZ2:red": Color(0.231373, 0.215686, 0.141176, 1),
"shader:Neck0/HeadBobber/CheekZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/CheekZ0:green": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/CheekZ1:green": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/CheekZ2:green": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/CheekZ2:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/Chin:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Chin:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EarZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EarZ0:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/EarZ0:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/EarZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EarZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EarZ1:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/EarZ1:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/EarZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EarZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EarZ2:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/EarZ2:green": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/EarZ2:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EmoteArmZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteArmZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EmoteArmZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteArmZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EmoteBrain:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ0:red": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EmoteEyeZ1:red": Color(1, 1, 1, 1),
"shader:Neck0/HeadBobber/EyeZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EyeZ0:blue": Color(0.376471, 0.376471, 0.376471, 1),
"shader:Neck0/HeadBobber/EyeZ0:green": Color(0.145098, 0.160784, 0.105882, 1),
"shader:Neck0/HeadBobber/EyeZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/EyeZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/EyeZ1:blue": Color(0.376471, 0.376471, 0.376471, 1),
"shader:Neck0/HeadBobber/EyeZ1:green": Color(0.145098, 0.160784, 0.105882, 1),
"shader:Neck0/HeadBobber/EyeZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/HairZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HairZ0:red": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/HairZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HairZ1:red": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/HairZ2:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HairZ2:red": Color(0.25098, 0.203922, 0.176471, 1),
"shader:Neck0/HeadBobber/Head:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Head:green": Color(0.788235, 0.854902, 0.776471, 1),
"shader:Neck0/HeadBobber/Head:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/HornZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HornZ0:green": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/HornZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/HornZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/HornZ1:green": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/HornZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/Mouth:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Mouth:blue": Color(0.72549, 0.72549, 0.72549, 1),
"shader:Neck0/HeadBobber/Mouth:green": Color(0.952941, 0.572549, 0.454902, 1),
"shader:Neck0/HeadBobber/Mouth:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:Neck0/HeadBobber/Nose:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:Neck0/HeadBobber/Nose:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:TailZ0:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:TailZ0:blue": Color(0.25098, 0.203922, 0.176471, 1),
"shader:TailZ0:green": Color(0.788235, 0.854902, 0.776471, 1),
"shader:TailZ0:red": Color(0.603922, 0.498039, 0.364706, 1),
"shader:TailZ1:black": Color(0.423529, 0.262745, 0.192157, 1),
"shader:TailZ1:blue": Color(0.25098, 0.203922, 0.176471, 1),
"shader:TailZ1:green": Color(0.788235, 0.854902, 0.776471, 1),
"shader:TailZ1:red": Color(0.603922, 0.498039, 0.364706, 1),
"tail": "0"
}

[node name="NametagHook" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="MouthHook" type="Node2D" parent="."]
script = ExtResource("31")

[node name="CreatureSfx" type="Node2D" parent="."]
script = ExtResource("23")

[node name="VoicePlayer" type="AudioStreamPlayer" parent="CreatureSfx"]
volume_db = 6.0
bus = &"Voice Bus"

[node name="MunchSound" type="AudioStreamPlayer" parent="CreatureSfx"]
bus = &"Voice Bus"

[node name="HopSound" type="AudioStreamPlayer2D" parent="CreatureSfx"]
stream = ExtResource("7")
volume_db = -4.0
bus = &"Sound Bus"

[node name="BonkSound" type="AudioStreamPlayer2D" parent="CreatureSfx"]
stream = ExtResource("5")
volume_db = -4.0
bus = &"Sound Bus"

[node name="SuppressSfxTimer" type="Timer" parent="CreatureSfx"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
script = ExtResource("8")

[connection signal="food_eaten" from="." to="CreatureSfx" method="_on_Creature_food_eaten"]
[connection signal="landed" from="." to="CreatureSfx" method="_on_Creature_landed"]
[connection signal="timeout" from="CreatureSfx/SuppressSfxTimer" to="CreatureSfx" method="_on_SuppressSfxTimer_timeout"]
